--- a/web/v2/ui/pages/entities.templ
+++ b/web/v2/ui/pages/entities.templ
@@ -21,7 +21,7 @@ templ EntitiesPage(entities []*models.Entity) {
 }
 
 templ EntityFormPage(entity *models.Entity) {
-	<div class="m-auto md:w-4/5 lg:w-3/5 2xl:w-2/5">
+	<div class="flex items-center justify-center">
 		@forms.EntityForm(entity)	
 	</div>	
 }
