--- a/web/v2/ui/shared/button.templ
+++ b/web/v2/ui/shared/button.templ
@@ -60,7 +60,7 @@ func getButtonClassesByTheme(theme string, size string) string {
 	case "warning":
 		colors = "bg-yellow-400 border-yellow-500 hover:bg-yellow-500 active:bg-yellow-600"
 	case "error":
-		colors = "bg-red-500 border-red-600 hover:bg-red-600 active:bg-red-700"
+		colors = "bg-red-500 text-gray-100 border-red-600 hover:bg-red-600 active:bg-red-700"
 	case "info":
 		colors = "bg-sky-400 border-sky-500 hover:bg-sky-500 active:bg-sky-600"
 	case "default":
