--- a/web/v2/ui/shared/nav.templ
+++ b/web/v2/ui/shared/nav.templ
@@ -2,7 +2,7 @@ package shared
 
 templ Nav() {
 	<nav hx-boost="true" class="sticky top-0 flex w-full items-center justify-between bg-sky-700 px-4 py-2 text-white md:px-8">
-		<h1 class="text-xl">
+		<h1 class="text-lg">
 			<a href="/" hx-indicator="#global-indicator">
 				Nota Fiscal Fácil
 			</a>
