--- a/web/v2/ui/shared/input.templ
+++ b/web/v2/ui/shared/input.templ
@@ -40,7 +40,7 @@ templ Input(data *InputData) {
 			class="relative flex flex-col gap-2"
 		}
 	>
-		<label for={ data.ID }><strong>{ data.Label }</strong></label>
+		<label class="truncate" for={ data.ID }><strong>{ data.Label }</strong></label>
 		<input
 			class="rounded border border-gray-300 bg-white p-2 outline-0 focus-within:border-gray-500"
 			if data.InputType != "" {
@@ -68,7 +68,7 @@ templ Input(data *InputData) {
 
 templ SelectInput(data *InputData) {
 	<div class="flex flex-col gap-2">
-		<label for={ data.ID }><strong>{ data.Label }</strong></label>
+		<label class="truncate" for={ data.ID }><strong>{ data.Label }</strong></label>
 		<select
 			class="h-10 rounded border border-gray-300 bg-white p-2 outline-0 focus-within:border-gray-500"
 			id={ data.ID }
