--- a/web/v2/ui/pages/invoices.templ
+++ b/web/v2/ui/pages/invoices.templ
@@ -5,7 +5,7 @@ import "github.com/cayo-rodrigues/nff/web/ui/shared"
 import "github.com/cayo-rodrigues/nff/web/ui/components"
 import "github.com/cayo-rodrigues/nff/web/ui/forms"
 
-templ InvoicesPage(i *models.Invoice) {
+templ InvoicesPage(invoices []*models.Invoice) {
 	<div class="flex flex-col gap-4">
 		<div class="flex flex-col gap-2 sm:flex-row">
 			<a href="/invoices/create" hx-boost="true">
@@ -27,7 +27,8 @@ templ InvoicesPage(i *models.Invoice) {
 				}
 			</a>
 		</div>
-		@components.InvoiceList()
+		<h2 class="text-base font-medium">Histórico de Requerimentos</h2>
+		@components.InvoiceList(invoices)
 	</div>
 }
 
