--- a/web/v2/static/css/custom.css
+++ b/web/v2/static/css/custom.css
@@ -42,3 +42,15 @@
         width: 14.28%;
     }
 }
+
+@keyframes fade-in {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+.animate-fade-in {
+    animation: fade-in;
+}
